# acars

./: Cargo.toml  Dockerfile  README.md  acars.Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: build-and-publish.yaml
assets/: logo.psd
src/: acars_env.rs  acars_error.rs  acars_opts.rs  main.rs
src/delivery/: mod.rs  webhook_body.rs
