[package]
name = "acars"
version = "0.0.1"
authors = ["Luke/Bluewing <hello@bluewing.co.nz>"]
edition = "2018"
readme = "README.md"
keywords = ["github actions", "ci/cd"]
publish = false
homepage = "https://github.com/bluewing/acars"
repository = "https://github.com/bluewing/acars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
maintenance = { status = "passively maintained" }

[dependencies]
curl = "0.4.34"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
exitcode = "1.1.2"
